[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection-guard"
version = "0.1.0"
description = "Zero-dependency helpers to harden LLM prompts against injection from untrusted third-party text."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Akshay Ramabhat", email = "akshayar640@gmail.com" }]
keywords = ["llm", "prompt-injection", "ai-security", "prompt", "guardrails"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/akshayramabhat/prompt-injection-guard"
Issues = "https://github.com/akshayramabhat/prompt-injection-guard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
